src/app/globals.css
@import './dummy.css';

@import 'tailwindcss';

@plugin '@tailwindcss/typography';

@theme {
  --color-primary: #5961df;
  --color-pink: #ec6ead;
  --color-yellow: #fcff9e; /* TODO: what about light mode? */
  --animate-rainbow-text: rainbow-text 3s ease infinite;

  @keyframes rainbow-text {
    0%,
    100% {
      background-size: 200% 200%;
      background-position: left center;
    }
    50% {
      background-size: 200% 200%;
      background-position: right center;
    }
  }
}

html,
body {
  padding: 0;
  margin: 0;
  font-family:
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    Fira Sans,
    Droid Sans,
    Helvetica Neue,
    sans-serif;
}
html,
body,
body > div:first-child,
div#__next,
div#__next > div {
  height: 100%;
}

* {
  box-sizing: border-box;
}

@layer base {
  body {
    @apply dark:bg-zinc-800;
  }
}
/*
@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
    color: white;
    background: black;
  }
} */

